[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/character_select.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.12, 0.1, 0.18, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.02, 0.12, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Select Character"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "< A/D to browse  |  E/Space to confirm  |  Esc to back >"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 100.0
offset_right = 500.0
offset_bottom = 600.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Panel0" type="Panel" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 400)
theme_override_styles/panel = SubResource("panel_style")

[node name="ColorPreview" type="ColorRect" parent="HBoxContainer/Panel0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 30.0
offset_right = 60.0
offset_bottom = 150.0
grow_horizontal = 2
color = Color(0.3, 0.5, 0.85, 1)

[node name="NameLabel" type="Label" parent="HBoxContainer/Panel0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 170.0
offset_right = 120.0
offset_bottom = 210.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Fighter"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="HBoxContainer/Panel0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 220.0
offset_right = 120.0
offset_bottom = 360.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "A balanced warrior."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Panel1" type="Panel" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 400)
theme_override_styles/panel = SubResource("panel_style")

[node name="ColorPreview" type="ColorRect" parent="HBoxContainer/Panel1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 30.0
offset_right = 60.0
offset_bottom = 150.0
grow_horizontal = 2
color = Color(0.3, 0.7, 0.35, 1)

[node name="NameLabel" type="Label" parent="HBoxContainer/Panel1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 170.0
offset_right = 120.0
offset_bottom = 210.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Spear Adept"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="HBoxContainer/Panel1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 220.0
offset_right = 120.0
offset_bottom = 360.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "A disciplined lancer."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Panel2" type="Panel" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 400)
theme_override_styles/panel = SubResource("panel_style")

[node name="ColorPreview" type="ColorRect" parent="HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 30.0
offset_right = 60.0
offset_bottom = 150.0
grow_horizontal = 2
color = Color(0.6, 0.3, 0.8, 1)

[node name="NameLabel" type="Label" parent="HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 170.0
offset_right = 120.0
offset_bottom = 210.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Dragonbound"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="HBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 220.0
offset_right = 120.0
offset_bottom = 360.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "An agile dragon rider."
horizontal_alignment = 1
autowrap_mode = 2
